[package]
name = "convy"
version = "0.1.0"
edition = "2024"
description = "Image processing CLI."
homepage = "https://github.com/radioactiveAHM/convy"
repository = "https://github.com/radioactiveAHM/convy"
authors = ["djahmadfire@gmail.com"]
keywords = ["cli", "image"]
categories = ["multimedia::images", "command-line-utilities"]

[dependencies]
clap = { version = "4.6.1", default-features = false, features = [
    "help",
    "std",
    "error-context",
    "suggestions",
    "usage",
    "derive",
] }
image = "0.25.10"
libwebp-sys = "0.14.4"
webp = { git = "https://github.com/radioactiveAHM/webp.git" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
debug = false
